--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -17,24 +17,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RandomUserCell" textLabel="G4l-L0-Seo" style="IBUITableViewCellStyleDefault" id="67u-q4-Gay">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RandomUserCell" id="67u-q4-Gay">
                                 <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="67u-q4-Gay" id="Nh9-di-qtS">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="G4l-L0-Seo">
-                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="hkn-Po-2H0" kind="show" id="x3J-7X-Ywb"/>
+                                    <segue destination="hkn-Po-2H0" kind="show" identifier="ShowDetail" id="x3J-7X-Ywb"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -44,7 +35,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="PLB-Qw-cDe">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="axw-aq-4Tr"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="axw-aq-4Tr">
+                            <connections>
+                                <segue destination="hkn-Po-2H0" kind="show" identifier="AddNew" id="aNd-kF-yS1"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C08-Mb-TBN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -58,10 +53,49 @@
                     <view key="view" contentMode="scaleToFill" id="3yf-ie-dtm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4ho-4W-IjX">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="4ho-4W-IjX" secondAttribute="height" multiplier="1:1" id="bGz-8u-ye3"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8VE-kX-CRi">
+                                <rect key="frame" x="67" y="204" width="103" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yix-nl-r5d">
+                                <rect key="frame" x="67" y="165" width="49" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I5K-SK-a0b">
+                                <rect key="frame" x="67" y="126" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="8VE-kX-CRi" firstAttribute="top" secondItem="yix-nl-r5d" secondAttribute="bottom" constant="50" id="Dp3-zX-aWT"/>
+                            <constraint firstItem="4ho-4W-IjX" firstAttribute="top" secondItem="8VE-kX-CRi" secondAttribute="bottom" constant="100" id="R0Z-WC-HmO"/>
+                            <constraint firstItem="yix-nl-r5d" firstAttribute="top" secondItem="I5K-SK-a0b" secondAttribute="bottom" constant="50" id="lEg-Vf-3NK"/>
+                            <constraint firstItem="4ho-4W-IjX" firstAttribute="centerX" secondItem="GOg-Oe-cCh" secondAttribute="centerX" id="nut-m0-ZRp"/>
+                            <constraint firstItem="4ho-4W-IjX" firstAttribute="centerY" secondItem="GOg-Oe-cCh" secondAttribute="centerY" id="wFR-W1-Gy3"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="GOg-Oe-cCh"/>
                     </view>
                     <navigationItem key="navigationItem" id="343-cK-kaE"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="8VE-kX-CRi" id="01r-Ri-kH0"/>
+                        <outlet property="image" destination="4ho-4W-IjX" id="RAj-gO-deH"/>
+                        <outlet property="nameLabel" destination="I5K-SK-a0b" id="3kl-2o-OHE"/>
+                        <outlet property="phoneLabel" destination="yix-nl-r5d" id="do8-Ou-VSb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DaJ-Sa-qgN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -86,4 +120,7 @@
             <point key="canvasLocation" x="2006" y="119"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="x3J-7X-Ywb"/>
+    </inferredMetricsTieBreakers>
 </document>
