--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OX0-JH-Iws">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Users-->
+        <scene sceneID="Hl8-9h-int">
+            <objects>
+                <tableViewController id="y9z-rj-mev" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Efh-CV-Iuc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" textLabel="56y-I4-Q7M" style="IBUITableViewCellStyleDefault" id="Tpu-LU-AzR">
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tpu-LU-AzR" id="CXI-d9-bXN">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="56y-I4-Q7M">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Jfo-nI-k9N" kind="show" trigger="accessoryAction" id="zWL-3c-MiQ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="y9z-rj-mev" id="Z17-8C-wKs"/>
+                            <outlet property="delegate" destination="y9z-rj-mev" id="IgI-1L-VBW"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Users" id="oUd-oF-3nb">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="fG7-O8-T7c"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gxo-RI-cEh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="944.79999999999995" y="1.3493253373313345"/>
+        </scene>
+        <!--Bob Dylan-->
+        <scene sceneID="kX7-9I-uxC">
+            <objects>
+                <viewController id="Jfo-nI-k9N" customClass="UserDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="y1M-bb-wcS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ugc-5h-Rrg">
+                                <rect key="frame" x="67" y="105" width="240" height="217"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="AqA-rZ-tN5"/>
+                                    <constraint firstAttribute="height" constant="217" id="Gnb-bV-BlJ"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="hX7-lj-tLE">
+                                <rect key="frame" x="115" y="370" width="144.5" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bob Dyaln " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rcl-XU-inF">
+                                        <rect key="frame" x="0.0" y="0.0" width="144.5" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irQ-Jt-ZY7">
+                                        <rect key="frame" x="35.5" y="64" width="74" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="hX7-lj-tLE" firstAttribute="top" secondItem="Ugc-5h-Rrg" secondAttribute="bottom" constant="48" id="0GO-X4-7Xz"/>
+                            <constraint firstItem="efw-fr-vHN" firstAttribute="trailing" secondItem="Ugc-5h-Rrg" secondAttribute="trailing" constant="68" id="0Ss-o8-1s8"/>
+                            <constraint firstItem="Ugc-5h-Rrg" firstAttribute="leading" secondItem="efw-fr-vHN" secondAttribute="leading" constant="67" id="Ds8-yq-jX5"/>
+                            <constraint firstItem="Ugc-5h-Rrg" firstAttribute="top" secondItem="efw-fr-vHN" secondAttribute="top" constant="61" id="Qxm-Da-6eY"/>
+                            <constraint firstItem="efw-fr-vHN" firstAttribute="trailing" secondItem="hX7-lj-tLE" secondAttribute="trailing" constant="115.5" id="fKL-Xn-pY7"/>
+                            <constraint firstItem="hX7-lj-tLE" firstAttribute="leading" secondItem="efw-fr-vHN" secondAttribute="leading" constant="115" id="p0R-hZ-NWd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="efw-fr-vHN"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Bob Dylan" id="QAM-1X-tbr"/>
+                    <connections>
+                        <outlet property="userEmailLabel" destination="irQ-Jt-ZY7" id="s5g-rP-3Oj"/>
+                        <outlet property="userImage" destination="Ugc-5h-Rrg" id="Cb7-UQ-g6u"/>
+                        <outlet property="userNameLabel" destination="Rcl-XU-inF" id="2Wf-sh-Y9L"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ksc-xf-AaE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1703.2" y="1.3493253373313345"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1b5-fn-Gsl">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OX0-JH-Iws" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Eah-uG-OJD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="y9z-rj-mev" kind="relationship" relationship="rootViewController" id="7w6-IP-1aN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hOk-I2-lZb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5.5999999999999996" y="1.3493253373313345"/>
+        </scene>
+    </scenes>
 </document>
